# lifeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  LAUNCH.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  codex_reader.py  command_utils.py  demo-run.sh  doctor.py  extractor.py  gemini_reader.py  handoff.py  lifeline_cli.py  package.json  pyproject.toml  redact.py  session_tracker.py  setup.cfg  setup.py  sources.py  terminal_backends.py  terminal_launchers.py  watch.py
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility.yml
.github/workflows/: ci.yml  compatibility.yml  release.yml
docs/: release-checklist-v0.2.0.md
tests/: test_reliability.py
tests/fixtures/claude-project/: session.jsonl
tests/fixtures/codex/: rollout-fixture.jsonl
tests/fixtures/gemini/sample/chats/: session-fixture.jsonl
