[metadata]
name = lifeline
version = 0.2.0
description = When your AI hits its limit, your work shouldn't - resume your AI CLI session in another tool with full context.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Avnish Raj
author_email = AvnishR4j@users.noreply.github.com
url = https://github.com/AvnishR4j/lifeline
project_urls =
    Repository = https://github.com/AvnishR4j/lifeline
    Issues = https://github.com/AvnishR4j/lifeline/issues
keywords = ai, cli, context, handoff, claude, codex, gemini
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Build Tools

[options]
python_requires = >=3.9
install_requires =
    pywinpty>=2,<3; platform_system == "Windows"
py_modules =
    lifeline_cli
    watch
    handoff
    extractor
    redact
    sources
    codex_reader
    gemini_reader
    doctor
    session_tracker
    terminal_backends
    terminal_launchers
    command_utils

[options.entry_points]
console_scripts =
    lifeline = lifeline_cli:main
